Bug 1677301 - try to catch exceptions while reading font file data in ScaledFontDWrite. r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D99179